--- a/css/styles.css
+++ b/css/styles.css
@@ -9,8 +9,15 @@ html {
 h2 {
   color: #cc8100;
 }
+.top8-friends {
+  width: 620px;
+}
+
 .portrait{
   float: left;
+  margin: 20px;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
 .banner {
@@ -24,9 +31,16 @@ h2 {
 .portrait-name {
   color: blue;
   font-weight: bold;
+  text-align: center;
 }
 
 img {
-  width: 150px;
-  height: 150px;
+  width: 100px;
+  height: 100px;
+  border: solid blue 1px;
+}
+
+.all-friends {
+  float: right;
+  font-weight: bold;
 }
