--- a/css/styles.css
+++ b/css/styles.css
@@ -18,10 +18,12 @@ h2 {
   margin: 20px;
   margin-top: 0px;
   margin-bottom: 0px;
+  max-width: 100px;
 }
 
 .banner {
   background-color: #ffcc75;
+  width: 620px;
 }
 
 .red-text {
@@ -32,9 +34,10 @@ h2 {
   color: blue;
   font-weight: bold;
   text-align: center;
+  margin: 0px;
 }
 
-img {
+.picture {
   width: 100px;
   height: 100px;
   border: solid blue 1px;
@@ -43,4 +46,13 @@ img {
 .all-friends {
   float: right;
   font-weight: bold;
+  font-size: 18px;
+}
+
+.online-now {
+  width: 50px;
+  height: 12.5px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
