--- a/css/styles2.css
+++ b/css/styles2.css
@@ -16,6 +16,8 @@ body {
   background-color: rgba(163, 163, 163, 0.75);
   overflow: hidden;
   width: 960px;
+  font-size: 14px;
+  border: solid black 1px;
 }
 
 .top-nav a{
@@ -23,6 +25,7 @@ body {
   text-align: center;
   text-decoration: none;
   color: black;
+  margin-top: 5px;
   margin-left: 10px;
   margin-right: 10px;
 }
@@ -30,9 +33,15 @@ body {
 .slogan {
   text-align: center;
   color: black;
+  background-color: rgba(163, 163, 163, 0.75);
   font-style: italic;
   font-weight: bold;
-  font-size: 30px
+  font-size: 30px;
+  border: solid black 1px;
+  width: 705px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 15px;
 }
 
 .main {
@@ -53,23 +62,31 @@ body {
 #signin-button {
   background-color: Transparent;
   float: right;
+  border: solid black 1px;
+  margin-top: 5px;
+  margin-left: 5px;
+  margin-left: 5px;
 }
 
 #email-button {
   background-color: #d8c6af;
   float: right;
+  border: solid black 1px;
+  margin-top: 5px;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 #nav-icon {
   float: left;
   width: 30px;
   height: 30px;
-
 }
 
 #nav-icon-big {
   display: block;
   margin-top: 65px;
+  margin-bottom: 30px;
   margin-left: auto;
   margin-right: auto;
   width: 250px;
@@ -85,6 +102,11 @@ body {
 }
 
 #facebook-icon {
+  width: 20px;
+  height: 20px;
+}
+
+#fire-icon {
   width: 20px;
   height: 20px;
 }
